--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -285,6 +285,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 2.5em;
+  font-family: 'Codystar', cursive;
   line-height: 1.25em; }
 
 h2 {
@@ -403,7 +404,7 @@ header h6 + p {
     line-height: 1;
     text-transform: none !important;
     font-family: 'Font Awesome 5 Free';
-    font-weight: 400; }
+    font-weight: 4000; }
   .icon > .label {
     display: none; }
   .icon:before {
@@ -439,7 +440,7 @@ ul.icons {
     ul.icons li:last-child {
       padding-right: 0; }
     ul.icons li .icon:before {
-      font-size: 1.25em; }
+      font-size: 1.0em; }
     ul.icons li a {
       color: inherit; }
 
