--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 ///
-/// Eventually by HTML5 UP
+/// Phantom by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -11,26 +11,13 @@
 		font-family: _font(family);
 		font-size: 16pt;
 		font-weight: _font(weight);
-		letter-spacing: _font(letter-spacing);
-		line-height: 1.65em;
+		line-height: 1.75;
 
 		@include breakpoint('<=xlarge') {
-			font-size: 12pt;
+			font-size: 14pt;
 		}
 
 		@include breakpoint('<=large') {
-			font-size: 11pt;
-		}
-
-		@include breakpoint('<=medium') {
-			font-size: 12pt;
-		}
-
-		@include breakpoint('<=small') {
-			font-size: 12pt;
-		}
-
-		@include breakpoint('<=xsmall') {
 			font-size: 12pt;
 		}
 	}
@@ -40,14 +27,13 @@
 			'border-bottom-color #{_duration(transition)} ease',
 			'color #{_duration(transition)} ease'
 		));
-		border-bottom: dotted 1px _palette(border2);
-		color: _palette(accent, bg);
 		text-decoration: none;
+		color: _palette(fg);
+		border-bottom: dotted 1px transparentize(_palette(fg), 0.5);
 
 		&:hover {
 			border-bottom-color: transparent;
-			color: _palette(accent, bg) !important;
-			text-decoration: none;
+			color: _palette(accent1) !important;
 		}
 	}
 
@@ -64,46 +50,77 @@
 		margin: 0 0 _size(element-margin) 0;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h1 {
+		font-size: 2.75em;
 		color: _palette(fg-bold);
-		font-weight: _font(weight-bold);
-		line-height: 1em;
+		font-weight: _font(weight-bold-alt);
+		line-height: 1.3;
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
+		letter-spacing: _font(letter-spacing-alt);
 
 		a {
 			color: inherit;
-			text-decoration: none;
+		}
+
+		@include breakpoint('<=small') {
+			font-size: 2em;
+			margin: 0 0 (_size(element-margin) * 0.5) 0;
+		}
+
+		@include breakpoint('<=xxsmall') {
+			font-size: 1.75em;
 		}
 	}
 
-	h1 {
-		font-size: 2.5em;
-		line-height: 1.25em;
+	h2, h3, h4, h5, h6 {
+		color: _palette(fg-bold);
+		font-weight: _font(weight-bold);
+		line-height: 1.5;
+		margin: 0 0 (_size(element-margin) * 1) 0;
+		text-transform: uppercase;
+		letter-spacing: _font(letter-spacing);
+
+		a {
+			color: inherit;
+		}
 	}
 
 	h2 {
-		font-size: 1.75em;
-		line-height: 1.5em;
+		font-size: 1.1em;
 	}
 
 	h3 {
-		font-size: 1.35em;
-		line-height: 1.5em;
+		font-size: 1em;
 	}
 
 	h4 {
-		font-size: 1.1em;
-		line-height: 1.5em;
+		font-size: 0.8em;
 	}
 
 	h5 {
-		font-size: 0.9em;
-		line-height: 1.5em;
+		font-size: 0.8em;
 	}
 
 	h6 {
-		font-size: 0.7em;
-		line-height: 1.5em;
+		font-size: 0.8em;
+	}
+
+	@include breakpoint('<=medium') {
+		h1, h2, h3, h4, h5, h6 {
+			br {
+				display: none;
+			}
+		}
+	}
+
+	@include breakpoint('<=small') {
+		h2 {
+			font-size: 1em;
+		}
+
+		h3 {
+			font-size: 0.8em;
+		}
 	}
 
 	sub {
@@ -143,7 +160,7 @@
 
 		code {
 			display: block;
-			line-height: 1.75em;
+			line-height: 1.75;
 			padding: 1em 1.5em;
 			overflow-x: auto;
 		}
@@ -157,4 +174,16 @@
 		&.major {
 			margin: (_size(element-margin) * 1.5) 0;
 		}
+	}
+
+	.align-left {
+		text-align: left;
+	}
+
+	.align-center {
+		text-align: center;
+	}
+
+	.align-right {
+		text-align: right;
 	}
