--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -1,59 +1,50 @@
 // Misc.
 	$misc: (
+		z-index-base:		10000
 	);
 
 // Duration.
 	$duration: (
-		nav:				0.5s,
-		transition:			0.2s,
-		bg-fadein:			2s,
-		bg-transition:		3s,
-		bg-slide:			45s // (lower = faster, higher = slower)
+		menu:				0.45s,
+		transition:			0.2s
 	);
 
 // Size.
 	$size: (
-		border-radius:		6px,
-		border-width:		2px,
-		element-height:		2.75em,
-		element-margin:		2em
+		border-radius:		4px,
+		border-width:		1px,
+		element-height:		3em,
+		element-margin:		2em,
+		gutter:				2.5em,
+		field-gutter:		2em,
+		inner:				68em,
+		menu:				22em
 	);
 
 // Font.
 	$font: (
-		family:				('Roboto', sans-serif),
+		family:				('Source Sans Pro', Helvetica, sans-serif),
 		family-fixed:		('Courier New', monospace),
-		weight:				400,
-		weight-bold:		700,
-		letter-spacing:		-0.01em
+		weight:				300,
+		weight-bold:		900,
+		weight-bold-alt:	700,
+		letter-spacing:		0.35em,
+		letter-spacing-alt:	-0.035em
 	);
 
 // Palette.
 	$palette: (
-		bg:					#000,
-		fg:					rgba(255,255,255,0.75),
-		fg-bold:			#fff,
-		fg-light:			rgba(255,255,255,0.5),
-		border:				rgba(255,255,255,0.35),
-		border-bg:			rgba(255,255,255,0.125),
-		border2:			rgba(255,255,255,0.25),
-
-		accent: (
-			bg:				#1cb495,
-			fg:				mix(#1cb495, #ffffff, 25%),
-			fg-bold:		#ffffff,
-			fg-light:		mix(#1cb495, #ffffff, 40%),
-			border:			rgba(255,255,255,0.25),
-			border-bg:		rgba(255,255,255,0.075),
-		),
-
-		positive: (
-			bg:				#1cb495,
-			fg:				#ffffff
-		),
-
-		negative: (
-			bg:				#ff2361,
-			fg:				#ffffff
-		)
+		bg:					#ffffff,
+		bg-accent:			#333333,
+		bg-alt:				#f6f6f6,
+		fg:					#585858,
+		fg-accent:			#ffffff,
+		border:				#c9c9c9,
+		border-bg:			rgba(144,144,144,0.075),
+		accent1:			#f2849e,
+		accent2:			#7ecaf6,
+		accent3:			#7bd0c1,
+		accent4:			#c75b9b,
+		accent5:			#ae85ca,
+		accent6:			#8499e7,
 	);
