--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,11 +3,12 @@
 @import 'libs/mixins';
 @import 'libs/vendor';
 @import 'libs/breakpoints';
+@import 'libs/html-grid';
 @import 'fontawesome-all.min.css';
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,900');
 
 /*
-	Eventually by HTML5 UP
+	Phantom by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -20,28 +21,34 @@
 		medium:   ( 737px,   980px  ),
 		small:    ( 481px,   736px  ),
 		xsmall:   ( 361px,   480px  ),
-		xxsmall:  ( null,    360px  ),
-		short:    '(max-height: 640px)'
+		xxsmall:  ( null,    360px  )
 	));
 
 // Base.
 
 	@import 'base/reset';
 	@import 'base/page';
-	@import 'base/bg';
 	@import 'base/typography';
 
-// Components.
+// Component.
 
+	@import 'components/row';
 	@import 'components/section';
 	@import 'components/icon';
 	@import 'components/list';
+	@import 'components/actions';
 	@import 'components/icons';
 	@import 'components/form';
+	@import 'components/box';
+	@import 'components/image';
+	@import 'components/table';
 	@import 'components/button';
+	@import 'components/tiles';
 
 // Layout.
 
 	@import 'layout/header';
-	@import 'layout/signup-form';
+	@import 'layout/menu';
+	@import 'layout/main';
 	@import 'layout/footer';
+	@import 'layout/wrapper';
